# D3Bridge

./: LICENSE  prueba.py  requirements.txt  requirements_.txt  texto.tex
D3Bridge/: .gitignore  README.md  custom.ipynb  package-lock.json  package.json  pyproject.toml  teste.js
D3Bridge/examples/: case1.ipynb  colors.ipynb  custom.ipynb  dashboard.ipynb  dataset.ipynb  double_slider.ipynb  graphs.ipynb  inputs.ipynb  selected_values.ipynb  teste.js
D3Bridge/js/graphs/: barplot.css  barplot.ts  base_plot.ts  decision.ts  geomapplot.ts  heatmap.css  heatmap.ts  histogramplot.css  histogramplot.ts  linearplot.css  linearplot.ts  ridgelineplot.css  ridgelineplot.ts  scatterplot.css  scatterplot.ts  shap_plot.ts  waterfallplot.ts
D3Bridge/js/layouts/: layouts.css  matrix_creator.ts  matrix_layout.ts
D3Bridge/js/widgets/: swatches.css
D3Bridge/samples/: d3_barchart_modified.js  d3_barchart_original.js  scaler.pkl  scatterplot.js  tsne_epoch_by_epoch_fc4.json  tsne_layer_by_layer.json
D3Bridge/src/D3Bridge/: __init__.py  _shap_processor.py  custom.py  datasets.py  graphs.py  observable_inputs.py
D3Bridge/src/D3Bridge/datasets/: affairs.csv
D3Bridge/src/vizpro/: __init__.py  custom.py  graphs.py  layouts.py
archive/: archive.tsv  graphs.ipynb
archive/widgets/: button.ts  checkbox.ts  rangeslider.ts
archive/widgets_js/: button.css  button.js  checkbox.js  rangeslider.js
examples/: case1.ipynb  colors.ipynb  custom.ipynb  dashboard.ipynb  dataset.ipynb  double_slider.ipynb  graphs.ipynb  inputs.ipynb  selected_values.ipynb  teste.js
vizpro/: .gitignore  custom.ipynb  example.ipynb  package-lock.json  package.json  pyproject.toml  teste.js
vizpro/examples/: case1.ipynb  colors.ipynb  custom.ipynb  dashboard.ipynb  dataset.ipynb  double_slider.ipynb  graphs.ipynb  inputs.ipynb  selected_values.ipynb  teste.js
vizpro/js/: button.ts  widget.css  widget.ts
vizpro/js/graphs/: barplot.css  barplot.ts  base_plot.ts  beeswarm.css  beeswarm.ts  decision.css  decision.ts  force.css  force.ts  geomapplot.css  geomapplot.ts  heatmap.ts  histogramplot.css  histogramplot.ts  linearplot.css  linearplot.ts  mapplot.css  mapplot.ts  ridgelineplot.ts  scatterplot.css  scatterplot.ts  shap_plot.ts  waterfallplot.css  waterfallplot.ts
vizpro/js/layouts/: matrix_creator.ts  matrix_layout.ts
vizpro/js/widgets/: button.ts  checkbox.ts  range_double.css  range_double.ts  rangeslider.ts  swatches.css  swatches.ts  widgets.css
vizpro/samples/: barplot.js  d3_barchar.js  d3_barchar2.js  d3_barchar3.js  d3_epoch.js  d3_layer.js  map.js  mariko.js  models.pkl  scatterplot.css  tsne_epoch_by_epoch_fc4.json  tsne_layer_by_layer.json  weights.json
vizpro/src/vizpro/: __init__.py  datasets.py  graphs.py  layouts.py  observable_inputs.py  widgets.py
