[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "D3Bridge"
version = "0.0.2"
dependencies = ["anywidget"]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = [
    "src/D3Bridge/static/*",
    "src/D3Bridge/datasets/*"
    ]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "src/D3Bridge/static/layouts/matrix_creator.js",
    "src/D3Bridge/static/layouts/matrix_layout.js",
    "src/D3Bridge/static/widgets/range_double.js",
    "src/D3Bridge/static/widgets/swatches.js"
]
skip-if-exists = [
    "src/D3Bridge/static/layouts/matrix_creator.js",
    "src/D3Bridge/static/layouts/matrix_layout.js",
    "src/D3Bridge/static/widgets/range_double.js",
    "src/D3Bridge/static/widgets/swatches.js"
]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
